--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,3 +1,26 @@
 {
-	"Batch Move": "批量移动"
+	"Related Move": "关联移动",
+	"Confirm Move File": "确认移动文件",
+	"File is referenced by count files. Do you want to move it?": "文件 \"{file}\" 被 {count} 个文件引用。是否要移动它？",
+	"Yes": "是",
+	"No": "否",
+	"Related Move Files": "关联移动文件",
+	"Files to be moved. Please review and select files with multiple references.": "待移动的文件列表。请检查并选择需要移动的文件，特别是被多个文件引用的文件。",
+	"Root file": "根文件",
+	"Referenced by 1 file": "被 {count} 个文件引用",
+	"Referenced by count files - Needs confirmation": "被 {count} 个文件引用 - 需要确认",
+	"Referenced by: ": "被以下文件引用: ",
+	"Total: total files, Selected: selected files, Needs confirmation: confirmation files": "总计: {total} 个文件, 已选择: {selected} 个文件, 需要确认: {confirmation} 个文件",
+	"Select All": "全选",
+	"Deselect All": "全不选",
+	"Confirm": "确认",
+	"Cancel": "取消",
+	"File Name": "文件名",
+	"Reference Info": "引用信息",
+	"Referenced By": "被引用",
+	"Choose a Target Folder": "选择目标文件夹",
+	"Navigate": "导航",
+	"Choose": "选择",
+	"Related Select": "关联选择",
+	"Cascade": "级联选择"
 }
